--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
 	font-family: "Oswald", sans-serif;
 	margin: 0;
 	min-height: 100%;
-	background-color: #1d1d1d;
+	background-color: #181818;
 	color: #ffffff;
 	cursor: auto;
 }
