--- a/src/components/archive/Photography/index.css
+++ b/src/components/archive/Photography/index.css
@@ -1,6 +1,6 @@
 .photography_container {
 	width: 100%;
-	padding: 0 15px;
+	padding: 15px 15px;
 }
 
 .gallery {
@@ -16,7 +16,7 @@
 .gallery-image {
 	max-width: 100%;
 	display: block;
-	outline: #05fdd8 solid 2.5px;
+	outline: #000 solid 5px;
 	outline-offset: -5px
 
 }
