--- a/src/components/monToFri/PostDetails/index.css
+++ b/src/components/monToFri/PostDetails/index.css
@@ -25,7 +25,7 @@
     color: #fff;
     cursor: pointer;
     width: auto;
-    background-color: #181818;
+    background-color: #000;
     border-color: inherit;
 
 
@@ -37,7 +37,7 @@
 
 .tab__panel {
     display: flex;
-    background-color: #1d1d1d;
+    background-color: #000;
     justify-content: space-around;
     align-items: center;
     padding: 15px;
@@ -99,7 +99,7 @@
     width: 100%;
     height: 90%;
     overflow: hidden;
-    background-color: #1d1d1d;
+    background-color: #000;
 }
 .tab__panel_2 img{
 	position: absolute;
@@ -129,6 +129,7 @@
     align-items: center;
     justify-content: center;
     height: 90%;
+    background-color: black;
 }
 
 .tools {
@@ -136,8 +137,7 @@
     align-items: center;
     justify-content: center;
     border-bottom: #ffffff solid 3px;
-    border-radius: 10px;
-    background-color: #1d1d1d;
+    background-color: #000;
 }
 
 .download__button {
@@ -150,17 +150,11 @@
     font-size: 200px;
 }
 .download__icon .icon__mtf {
-
     width: auto;
     height: auto;
     font-size: 100px;
     border-bottom: #fff solid 5px;
 }
-
-
-
-
-
 .logos {
     max-width: 100%;
     max-height: 100%;
@@ -170,9 +164,7 @@
     align-items: center;
     width: 100%;
     height: auto;
-
 }
-
 .logos img {
     width: auto;
     background-size: contain;
@@ -193,8 +185,7 @@
     height: 25vh;
     position: relative;
     border-bottom: #ffffff solid 3px;
-    border-radius: 10px;
-    background-color: #1d1d1d;
+    background-color: #000;
 }
 
 .resolution div {
@@ -208,9 +199,8 @@
 .size {
     height: 25vh;
     position: relative;
-    border-bottom: #ffffff solid 3px;
-    border-radius: 10px;
-    background-color: #1d1d1d;
+
+    background-color: #000;
 }
 
 .size div {
@@ -225,9 +215,8 @@
     .tab__panel {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
-        gap: 30px;
-        height: 100%;
+        justify-content: space-between;
+        height: 95%;
         align-items: center;
         padding: 5px 0;
     }
@@ -235,11 +224,10 @@
     font-size: 25px;
 }
     .tab__panel .download_img{
-        width: 95%;
+        width: 40%;
     }
 
     .tab__panel i {
-
         font-size: 45px;
         width: auto;
         cursor: pointer;
@@ -248,7 +236,6 @@
         font-size: 50px;
 
     }
-
     .tab__button p {
         display: none;
     }
@@ -270,4 +257,20 @@
     }
 
 
+}
+@media (max-width: 800px) {
+    .tab__panel .download_img{
+        width: 55%;
+
+    }
+}
+@media (max-width: 600px) {
+    .tab__panel .download_img{
+        width: 75%;
+    }
+}
+@media (max-width: 400px) {
+    .tab__panel .download_img{
+        width: 90%;
+    }
 }
