--- a/src/components/shared/NavBar/index.css
+++ b/src/components/shared/NavBar/index.css
@@ -23,8 +23,8 @@
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
-	background-color: #181818;
-	border: solid 2px #181818;
+	background-color: #000;
+	border: none;
 	z-index: 10;
 	margin: 0;
 	padding: 5px 15px;
@@ -107,13 +107,9 @@
 
 .hr__nav {
 	border: 0;
-	height: 3px;
-	background-image: linear-gradient(
-		to right,
-		rgba(0, 225, 255, 0),
-		#05fdd8,
-		rgba(12, 135, 184, 0)
-	);
+	height: 2px;
+	background: #05fdd8;
+
 }
 
 @media (max-width: 1000px) {
@@ -168,17 +164,17 @@
 		display: block;
 	}
 	.enlaces-menu {
-		font-size: 40px;
+		font-size: 30px;
 		display: block;
 		position: fixed;
 		top: 0;
 		left: 0;
 		flex-direction: column;
-		justify-content: space-around;
+		justify-content: center;
 		align-items: center;
 		margin: 0;
 		padding: 0;
-		background-color: #181818;
+		background-color: #000;
 		opacity: 0;
 		transition: opacity 1s ease-out;
 		width: 100%;
@@ -186,6 +182,9 @@
 		transform: translateY(-100vh);
 		z-index: -999;
 		transition: transform 0.5s ease-in-out;
+	}
+	.enlaces-menu.activado{
+		gap: 30px;
 	}
 }
 
@@ -200,7 +199,6 @@
 	.nav-main-down ul {
 		display: flex;
 		gap: 40px;
-
 		font-size: 15px;
 	}
 	.nav-brand {
