--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -35,19 +35,15 @@ body.hide-content .tunnel {
 }
 
 .tunnel {
-	background-color: #00ffd956;
+	background-color: rgba(5, 253, 216, 0.5);
 	position: relative;
-	/*max-width: 100%;*/
-	/*max-height: 100%;*/
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	z-index: -99;
 	overflow: hidden;
-	/*top: 0;*/
-	/*left: 0;*/
-	opacity: .5;
-	transition: opacity 1.5s linear;
+	opacity: .85;
+	transition: opacity 5s linear;
 }
 
 .particles {
@@ -240,7 +236,7 @@ body.hide-content .tunnel {
 	height: 100vh;
 	width: 100vw;
 	z-index: 100;
-	background-color: #1d1d1d;
+	background-color: #000;
 	display: flex;
 	justify-content: center;
 	align-items: center;
