--- a/src/components/monToFri/Hero/index.css
+++ b/src/components/monToFri/Hero/index.css
@@ -1,6 +1,6 @@
 /*MON-TO-FRI*/
 .mon-to-fri_principal{
-background-color: #181818;
+background-color: #161B22;
 	height: auto;
 }
 .mon-to-fri_principal .section_header{
