--- a/src/components/Contact/Formulario/index.css
+++ b/src/components/Contact/Formulario/index.css
@@ -6,18 +6,13 @@
 .formulario {
     max-width: 600px;
     margin-top: 100px;
-    background: rgba(24, 24, 24, 0.9);
+    background: rgba(13, 17, 23, 0.9);
     border-radius: 10px;
     padding: 20px;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-
-
 }
-
-
-
 .formulario label {
     display: block;
     font-weight: 500;
@@ -36,15 +31,12 @@
     font-size: 18px;
     padding: 10px;
     margin-bottom: 5px;
-    color: #8D8D8D;
-    background-color: #2B2B2B;
+    color: #fff;
+    background-color: #0D1117;
 }
 
 .formulario input:focus, .formulario textarea:focus {
     outline: none;
-
-
-
 }
 
 .formulario .error {
@@ -57,19 +49,19 @@
     display: block;
     background: #008f79;
     margin-top: 10px;
-    font-weight: 500;
     border: none;
     cursor: pointer;
     width: 100%;
     padding: 10px;
     border-radius: 5px;
-    color: #fff;
+    color: #000;
     font-size: 16px;
+    font-weight: bolder;
     transition: .5s ease all;
 }
 
 .formulario button[type="submit"]:hover {
-    background: rgba(0, 255, 217, 0.75);
+    background: #05fdd8;
 }
 
 .formulario .exito {
@@ -82,5 +74,5 @@
 .formulario input[type="radio"] {
     width: auto;
 }
-/*Animations*/
+
 
