--- a/src/components/monToFri/PostDetails/index.css
+++ b/src/components/monToFri/PostDetails/index.css
@@ -25,7 +25,7 @@
     color: #fff;
     cursor: pointer;
     width: auto;
-    background-color: #000;
+    background-color: #161B22;
     border-color: inherit;
 
 
@@ -37,7 +37,7 @@
 
 .tab__panel {
     display: flex;
-    background-color: #000;
+    background-color: #161B22;
     justify-content: space-around;
     align-items: center;
     padding: 15px;
@@ -99,7 +99,7 @@
     width: 100%;
     height: 90%;
     overflow: hidden;
-    background-color: #000;
+    background-color: #161B22;
 }
 .tab__panel_2 img{
 	position: absolute;
@@ -129,7 +129,7 @@
     align-items: center;
     justify-content: center;
     height: 90%;
-    background-color: black;
+    background-color: #161B22;
 }
 
 .tools {
@@ -137,7 +137,7 @@
     align-items: center;
     justify-content: center;
     border-bottom: #ffffff solid 3px;
-    background-color: #000;
+    background-color: #161B22;
 }
 
 .download__button {
@@ -185,7 +185,7 @@
     height: 25vh;
     position: relative;
     border-bottom: #ffffff solid 3px;
-    background-color: #000;
+    background-color: #161B22;
 }
 
 .resolution div {
@@ -197,10 +197,10 @@
 }
 
 .size {
-    height: 25vh;
+    height: 22vh;
     position: relative;
 
-    background-color: #000;
+    background-color: #161B22;
 }
 
 .size div {
