--- a/src/components/shared/NavBar/index.css
+++ b/src/components/shared/NavBar/index.css
@@ -41,6 +41,7 @@
 .nav-main-up ul {
 	display: flex;
 	text-decoration: none;
+	align-items: center;
 	gap: 15px;
 }
 
@@ -94,9 +95,8 @@
 }
 .nav-main-down ul {
 	display: flex;
-	gap: 60px;
-
-	font-size: 20px;
+	gap: 70px;
+	font-size: 25px;
 }
 .nav-main-down ul li {
 	cursor: pointer;
